--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI = "mongodb://<dbuser>:<dbpassword>@ds123499.mlab.com:23499/heroku_7m8h0hf5"
+MONGODB_URI = "mongodb://ds123499.mlab.com:23499/heroku_7m8h0hf5"
